Inicializando CRUD de personal

--- a/academia/templates/academia/index.html
+++ b/academia/templates/academia/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     Página inicial
+    {% for personal in personais %}
+        <li>{{personal.nome}} -- {{personal.idade}}</li>
+    {% endfor %}
 </body>
 </html>
